infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
  name: ticket-app-ingress
spec:
  rules:
    - host: tx-app.io
      http:
        # paths are search in order
        # (so first matched in the list is used)
        paths:
          - backend:
              service:
                name: auth-svc
                port:
                  number: 3005
            path: /api/v0/users/?(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: tickets-svc
                port:
                  number: 3006
            path: /api/v0/tickets/?(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: client-svc
                port:
                  number: 3000
            path: /?(.*)
            pathType: ImplementationSpecific
status:
  loadBalancer: {}
